HBASE-7899 Cell block building tools: Cell codec and means of iterating an objects Cells
git-svn-id: https://svn.apache.org/repos/asf/hbase/trunk@1449420 13f79535-47bb-0310-9956-ffa450edef68